--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -211,26 +211,19 @@
     }
 
     .tests-item {
-      width: 98%;
+      width: 200px;
       margin-left: 1%;
       padding: 10px;
       display: flex;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
-      border-bottom: 1px solid #ddd;
+      border-radius: 8px;
+      border: 1px solid #ddd;
       cursor: pointer;
 
       & span {
         width: 100px;
-      }
-
-      & span:last-child {
-        text-align: right;
-        cursor: pointer;
-      }
-
-      & span:last-child:hover {
-        font-weight: bold;
+        text-align: center;
       }
     }
 
@@ -241,16 +234,16 @@
     .tests-items-container {
       padding-top: 20px;
       width: 100%;
-      height: 550px;
+      height: 690px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      align-items: center;
       overflow-y: scroll;
     }
 
-    .exam-results-header {
-      width: 100%;
-      height: 80px;
-    }
-
     .exam-results-item {
+      height: 700px;
       width: 98%;
       margin-left: 1%;
       padding: 10px;
@@ -324,7 +317,7 @@
       display: none;
       width: 30%;
       left: 35%;
-      height: 80vh;
+      height: 600px;
       border: 1px solid #ddd;
       border-radius: 4px;
       position: absolute;
@@ -332,15 +325,50 @@
       top: 10vh;
       z-index: 10;
       background-color: white;
-      overflow-y: scroll;
+      overflow: hidden;
 
-      & .close-cross {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        cursor: pointer;
-        font-size: 20px;
+      & .form-question-header {
+        width: 100%;
+        height: 70px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        position: relative;
+        margin-bottom: 15px;
+
+        & button {
+
+          cursor: pointer;
+          background-color: #00E1B4;
+          color: white;
+          border: none;
+          padding: 12px;
+          margin-top: 15px;
+          width: 200px;
+          border-radius: 4px;
+          font-size: 12px;
+          cursor: pointer;
+          transition: background-color 0.3s;
+          position: fixed;
+          z-index: 100;
+        }
+
+        & .close-cross {
+          width: 50px;
+          position: absolute;
+          top: 20px;
+          right: 10px;
+          cursor: pointer;
+          font-size: 20px;
+        }
       }
+
+      & .form-question-container {
+        width: 100%;
+        height: 500px;
+        overflow-y: scroll;
+      }
+
     }
 
     .tests-container-form::-webkit-scrollbar {
@@ -349,8 +377,10 @@
 
     /* Hide scrollbar for IE, Edge and Firefox */
     .tests-container-form {
-      -ms-overflow-style: none;  /* IE and Edge */
-      scrollbar-width: none;  /* Firefox */
+      -ms-overflow-style: none;
+      /* IE and Edge */
+      scrollbar-width: none;
+      /* Firefox */
     }
 
     .answer-block-container {
@@ -374,7 +404,7 @@
     select {
       width: 100% !important;
       height: 30px;
-      padding: 12px;
+      padding-left: 15px;
       border: 1px solid #ddd;
       background-color: white;
       border-radius: 4px;
@@ -392,6 +422,8 @@
       <div onclick="displayContainers('contenido')">Contenido</div>
       <div onclick="displayContainers('tests')">Tests</div>
     </div>
+
+    <!-- RESULTADOS EXAMENES -->
     <div id="exam-results-id" class="exam-results">
       <div class="exam-results-header"></div>
       <div id="exam-results-items-container-id" class="exam-results-items-container">
@@ -415,6 +447,7 @@
       </div>
     </div>
 
+    <!-- USUARIOS -->
     <div id="users-container-id" class="users-container">
       <div class="user-header">
         <span>Crear usuario:</span>
@@ -424,11 +457,10 @@
           <span onclick="createUser()">+ Crear</span>
         </div>
       </div>
-      <div id="user-items-container-id" class="user-items-container">
-
-      </div>
+      <div id="user-items-container-id" class="user-items-container"></div>
     </div>
 
+    <!-- CONTENIDO -->
     <div id="content-container-id" class="content-container">
       <div class="content-header">
         <span>Crear contenido:</span>
@@ -438,40 +470,34 @@
           <span onclick="createContent()">+ Crear</span>
         </div>
       </div>
-      <div id="content-items-container-id" class="content-items-container">
-      </div>
+      <div id="content-items-container-id" class="content-items-container"></div>
     </div>
 
+
+    <!-- PREGUNTAS EXAMENES -->
     <div id="tests-container-id" class="tests-container">
       <div id="tests-items-container-id" class="tests-items-container">
-        <% content_techs.forEach((con)=> { %>
-          <div onclick="openQuestionModal('<%= con.id %>')" class="tests-item">
-            <span><b>
-                <%= con.name %>
-              </b>
-            </span>
-            <span><b>
-                Hola
-              </b>
-            </span>
-          </div>
-          <% }); %>
       </div>
     </div>
 
+    <!-- FORMULARIO PREGUNTAS -->
     <div id="tests-container-id-form" class="tests-container-form">
-      <span onclick="closeQuestionModal()" class="close-cross">x</span>
-      <button onclick="postQuestions()">Enviar</button>
+      <div class="form-question-header">
+        <p onclick="closeQuestionModal()" class="close-cross">x</p>
+        <button onclick="postQuestions()">Guardar preguntas</button>
+      </div>
+      <form id="form-question-container-id" class="form-question-container"></form>
     </div>
-
 
   </div>
 </body>
 <script>
+  /* VARIABLES GLOBALES Y SETEO INICIAL */
   document.body.style.background = 'url("/images/<%= background_image %>") no-repeat center center fixed';
   document.body.style.backgroundSize = 'cover'; // Ensures full coverage
   var contentId = null;
-  var content = <%- JSON.stringify(content) %>;
+  var blockCreateContent = false;
+  var content_question = <%- JSON.stringify(content_question) %>;
   var content_techs = <%- JSON.stringify(content_techs) %>;
   var users = <%- JSON.stringify(users) %>;
 
@@ -507,50 +533,80 @@
     })
   }
 
-  const displayQuestionForm = () => {
-    const testContainer = document.getElementById("tests-container-id-form");
+  const showTestContent = () => {
+    const testContainer = document.getElementById("tests-items-container-id")
+    testContainer.innerHTML = "";
+    content_question.forEach((content) => {
+      testContainer.innerHTML += `
+          <div onclick="openQuestionModal('${content.id}')" class="tests-item">
+            <span><b>
+                ${content.name}
+              </b>
+            </span>
+          </div>
+          `
+    })
+  }
+
+  const displayQuestionForm = (questions) => {
+    if (!questions) return
+    const testContainer = document.getElementById("form-question-container-id");
     [...Array(50).keys()].forEach((item, index) => {
-      index = index + 1
       testContainer.innerHTML += `
         <div class="answer-block">
-          <p>Pregunta ${index}</p><br />
+          <p>Pregunta ${index + 1}</p><br />
           <textarea id="question_${index}_id" placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input id="answer_${index}_a_id" type="text" class="answer-input" id="content-name"
-            placeholder="Respuesta A" /><br />
-          <span>B</span><input id="answer_${index}_b_id" type="text" class="answer-input" id="content-name"
-            placeholder="Respuesta B" /><br />
-          <span>C</span><input id="answer_${index}_c_id" type="text" class="answer-input" id="content-name"
-            placeholder="Respuesta C" /><br />
-          <span>D</span><input id="answer_${index}_d_id" type="text" class="answer-input" id="content-name"
-            placeholder="Respuesta D" /><br />
-          <select id="correct_answer_${index}_id">
+
+          <span>A</span><input id="answer_${index}_a_id" type="text" class="answer-input" placeholder="Respuesta A" /><br />
+          
+          <span>B</span><input id="answer_${index}_b_id" type="text" class="answer-input" placeholder="Respuesta B" /><br />
+          
+          <span>C</span><input id="answer_${index}_c_id" type="text" class="answer-input" placeholder="Respuesta C" /><br />
+          
+          <span>D</span><input id="answer_${index}_d_id" type="text" class="answer-input" placeholder="Respuesta D" /><br />
+          
+          <select name="correct_answer_${index}_name" id="correct_answer_${index}_id">
+            <option value="" disabled selected>Respuesta correcta</option>
             <option value="A">A</option>
             <option value="B">B</option>
             <option value="C">C</option>
             <option value="D">D</option>
           </select>
         </div>`
+    });
+    [...Array(50).keys()].forEach((item, index) => {
+      if (questions[index]) {
+        document.getElementById(`question_${index}_id`).value = questions[index].question
+        document.getElementById(`answer_${index}_a_id`).value = questions[index].answer_a
+        document.getElementById(`answer_${index}_b_id`).value = questions[index].answer_b
+        document.getElementById(`answer_${index}_c_id`).value = questions[index].answer_c
+        document.getElementById(`answer_${index}_d_id`).value = questions[index].answer_d
+        document.getElementById(`correct_answer_${index}_id`).value = questions[index].correct_answer
+      }
     })
   }
 
-  setTimeout(() => {
-    showContent()
-    showUsers()
-    displayQuestionForm()
-  }, 100)
+  const openQuestionModal = (id) => {
+    contentId = id;
+    const filteredContent = content_question.filter((cnt) => cnt.id == id).pop()
+    document.getElementById("tests-container-id-form").style.display = "block"
+    displayQuestionForm(filteredContent.questions)
+  }
 
   const postQuestions = async (id) => {
-    const payload = [1, 2].map((i, index) => {
+    const filteredContent = content_question.filter((cnt) => cnt.id == contentId).pop()
+    const payload = [...Array(50).keys()].map((item, index) => {
       return {
-        question: document.getElementById(`question_${i}_id`).value,
-        answer_a: document.getElementById(`answer_${i}_a_id`).value,
-        answer_b: document.getElementById(`answer_${i}_b_id`).value,
-        answer_c: document.getElementById(`answer_${i}_c_id`).value,
-        answer_d: document.getElementById(`answer_${i}_d_id`).value,
-        correct_answer: document.getElementById(`correct_answer_${i}_id`).value,
+        id: filteredContent.questions[index]?.id || null,
+        question: document.getElementById(`question_${index}_id`).value,
+        answer_a: document.getElementById(`answer_${index}_a_id`).value,
+        answer_b: document.getElementById(`answer_${index}_b_id`).value,
+        answer_c: document.getElementById(`answer_${index}_c_id`).value,
+        answer_d: document.getElementById(`answer_${index}_d_id`).value,
+        correct_answer: document.getElementById(`correct_answer_${index}_id`).value || "",
       }
     })
-    const response = await fetch('/post-questions', {
+    fetch('/post-questions', {
       method: 'POST',
       headers: {
         "Content-Type": "application/json",
@@ -560,6 +616,14 @@
         contentId: contentId,
         payload: payload
       })
+    }).then((response) => {
+      if (!response.ok) {
+        alert("Lo sentimos. Algo salió mal.")
+      }
+      alert("Respuestas guardadas con exito.")
+      filteredContent.questions = payload;
+    }).catch(() => {
+      alert("Lo sentimos. Algo salió mal.")
     });
   }
 
@@ -599,19 +663,9 @@
     });
   }
 
-
-  const openQuestionModal = (id) => {
-    contentId = id;
-    content.forEach((item) => {
-      console.log(item.name)
-    })
-    document.getElementById("tests-container-id-form").style.display = "block"
-  }
-
   const closeQuestionModal = () => {
     document.getElementById("tests-container-id-form").style.display = "none"
   }
-
 
   const displayContainers = (container) => {
     document.getElementById("exam-results-id").style.display = "none"
@@ -626,6 +680,9 @@
   }
 
   const createContent = async () => {
+
+    if (blockCreateContent) return
+    blockCreateContent = true
 
     const fileInput = document.getElementById('file-id');
     const contentName = document.getElementById('content-name').value;
@@ -650,24 +707,30 @@
 
     try {
       // Send the file to the server
-      const response = await fetch('/create-content', {
+      fetch('/create-content', {
         method: 'POST',
         headers: {
           token: localStorage.getItem("minibit-token"),
         },
         body: formData
-      });
-
-      if (response.ok) {
-        const result = await response.json();
-        alert('Contenido subido exitosamente.');
-        content_techs.push({ name: result.name, filename: result.filename, content_id: result.id })
-        showContent()
-      } else {
-        throw new Error('Upload failed');
-      }
+      }).then(async (response) => {
+        if (response.ok) {
+          const result = await response.json();
+          alert('Contenido subido exitosamente.');
+          content_techs.push({ name: result.name, filename: result.filename, content_id: result.id })
+          content_question.push({ name: result.name, id: result.id, questions: [] })
+          showContent()
+          showTestContent()
+        } else {
+          throw new Error('Upload failed');
+        }
+      }).catch(() => {
+        alert('Lo sentimos. Algo falló.');
+      }).finally(() => {
+        blockCreateContent = false
+      })
     } catch (error) {
-      alert('Algo fallo.');
+      alert('Lo sentimos. Algo falló.');
     }
   }
 
@@ -692,22 +755,17 @@
         password: password,
       }),
     }).then(async (response) => {
-
       if (!response.ok) {
         alert("Lo sentimos, algo falló.");
         return
       }
-
       alert("Usuario creado");
 
       const result = await response.json();
-
       const userContainer = document.getElementById("user-items-container-id")
 
       users.push({ email: email, password: password, id: result.user })
-
       showUsers()
-
       document.getElementById("email").value = "";
       document.getElementById("password").value = "";
 
@@ -715,6 +773,13 @@
       alert("Lo sentimos, algo falló.");
     });
   }
+
+  setTimeout(() => {
+    showContent()
+    showUsers()
+    displayQuestionForm()
+    showTestContent()
+  }, 100)
 
 </script>
 
