--- a/views/exam.ejs
+++ b/views/exam.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ACID LABS Challenge</title>
+  <title>Minibit©</title>
   <link rel="stylesheet" href="/css/exam.css" />
 </head>
 
