--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-   <title>Minibit©</title>
+   <title>Acid Labs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     * {
@@ -19,7 +19,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: url("/images/background.jpg") no-repeat center center fixed;
+      background: url("/images/acid_labs.jpg") no-repeat center center fixed;
       background-size: cover;
     }
 
